--- a/libpictureoptions/src/main/res/layout/activity_picture_camera.xml
+++ b/libpictureoptions/src/main/res/layout/activity_picture_camera.xml
@@ -18,9 +18,7 @@
 
         <Button
             android:id="@+id/btnOpenLite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
+            style="@style/all_picture_camera_button"
             android:text="@string/open_light"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"/>
@@ -28,49 +26,77 @@
 
         <Button
             android:id="@+id/btnTakePicture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/all_picture_camera_button"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:text="@string/take_picture"/>
 
+        <Button
+            android:id="@+id/btnVideo"
+            style="@style/all_picture_camera_button"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:text="@string/video"/>
+
     </com.zhy.android.percent.support.PercentRelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relPreviewOptions"
+        android:id="@+id/relTakePicturePreviewOptions"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:visibility="gone">
 
         <Button
-            android:id="@+id/btnPreviewCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
+            android:id="@+id/btnTakePicturePreviewCancel"
+            style="@style/all_picture_camera_button"
             android:text="@string/cancel"
             android:layout_alignParentBottom="true"/>
 
 
         <Button
-            android:id="@+id/btnPreviewConfirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAllCaps="false"
+            android:id="@+id/btnTakePicturePreviewConfirm"
+            style="@style/all_picture_camera_button"
             android:text="@string/confirm"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"/>
 
         <ImageView
-            android:id="@+id/imgPreview"
-            android:layout_above="@id/btnPreviewConfirm"
+            android:id="@+id/imgTakePicturePreview"
+            android:layout_above="@id/btnTakePicturePreviewConfirm"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/relVideoPreviewOptions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="gone">
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/btnVideoPreviewCancel"
+            style="@style/all_picture_camera_button"
+            android:text="@string/cancel"
+            android:layout_alignParentBottom="true"/>
 
 
+        <Button
+            android:id="@+id/btnVideoPreviewConfirm"
+            style="@style/all_picture_camera_button"
+            android:text="@string/confirm"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
