--- a/libpictureoptions/src/main/res/values/styles.xml
+++ b/libpictureoptions/src/main/res/values/styles.xml
@@ -12,58 +12,12 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <style name="Dialog_Fullscreen">
+    <style name="picture_camera">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
-
-    <style name="dialog_between_select" parent="android:style/Theme.Dialog">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowIsFloating">true</item>
-    </style>
-
-    <!-- android:windowBackground换窗口默认背景-->
-    <!--  android:windowFrame设置Dialog的windowFrame框为无（去掉白色边框）-->
-    <!-- ndroid:windowIsFloating是否浮现在activity之上-->
-    <!--  android:windowIsTranslucent是否半透明-->
-    <!-- android:backgroundDimEnabled背景是否模糊显示-->
-    <style name="chatAudioDialog" parent="@android:style/Theme.Dialog"><!--自定义对话框风格-->
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowNoTitle">true</item>
-    </style>
-
-    <!--当我们从 A1 启动 A2 时，A1 从屏幕上消失，这个动画叫做 android:activityOpenExitAnimation-->
-    <!--当我们从 A1 启动 A2 时，A2 出现在屏幕上，这个动画叫做 android:activityOpenEnterAnimation-->
-    <!--当我们从 A2 退出回到 A1 时，A2 从屏幕上消失，这个叫做 android:activityCloseExitAnimation-->
-    <!--当我们从 A2 退出回到 A1 时，A1 出现在屏幕上，这个叫做 android:activityCloseEnterAnimation-->
-
-
-    <style name="popActivityAnimation" parent="@android:style/Animation.Activity">
-        <item name="android:activityOpenEnterAnimation">@anim/frame_anim_from_popu_in</item>
-        <item name="android:activityOpenExitAnimation">@anim/frame_anim_from_popu_out</item>
-        <item name="android:activityCloseEnterAnimation">@anim/frame_anim_from_popu_out</item>
-        <!--<item name="android:activityCloseExitAnimation">@anim/frame_anim_from_left</item>-->
-    </style>
-
-    <style name="jumpToPopActivityAnimation" parent="@android:style/Animation.Activity">
-        <item name="android:activityOpenEnterAnimation">@anim/frame_anim_from_popu_in</item>
-        <item name="android:activityOpenExitAnimation">@anim/frame_anim_from_popu_out</item>
-        <item name="android:activityCloseEnterAnimation">@anim/frame_anim_from_popu_in</item>
-        <item name="android:activityCloseExitAnimation">@anim/frame_anim_from_popu_out</item>
-    </style>
-
 
     <style name="line_horizontal">
         <item name="android:layout_width">match_parent</item>
@@ -75,24 +29,6 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">@dimen/line_width_or_height</item>
         <item name="android:background">@color/default_line_bg</item>
-    </style>
-
-    <style name="all_parent_item">
-        <item name="android:layout_height">0dp</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:background">@color/white</item>
-        <item name="android:descendantFocusability">blocksDescendants</item>
-        <item name="android:layout_marginBottom">@dimen/line_width_or_height</item>
-        <item name="android:orientation">horizontal</item>
-    </style>
-
-    <style name="all_parent_item_left_img">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_centerVertical">true</item>
-        <item name="android:paddingLeft">@dimen/common_dp_1.5</item>
-        <item name="android:layout_marginTop">@dimen/common_dp_0.2</item>
-        <item name="android:layout_marginBottom">@dimen/common_dp_0.2</item>
     </style>
 
     <style name="defaule_button_style" parent="Base.Widget.AppCompat.Button.Small">
@@ -117,7 +53,16 @@
         <item name="android:windowExitAnimation">@anim/anim_to_center</item>
     </style>
 
-    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--相机中所有按钮的样式-->
+    <style name="all_picture_camera_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">#fff</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
 </resources>
