完成仿微信按钮逻辑初始化，未实现按钮外形以及加入包中

--- a/libpictureoptions/src/main/res/layout/activity_picture_camera.xml
+++ b/libpictureoptions/src/main/res/layout/activity_picture_camera.xml
@@ -39,6 +39,12 @@
             android:layout_alignParentLeft="true"
             android:text="@string/video"/>
 
+        <com.libpictureoptions.android.pictureCamera.view.WxTakePictureOrVideoView
+            android:id="@+id/wxView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/white"/>
+
     </com.zhy.android.percent.support.PercentRelativeLayout>
 
     <RelativeLayout
