新增仿微信小视频按钮效果

--- a/libpictureoptions/src/main/res/layout/activity_picture_camera.xml
+++ b/libpictureoptions/src/main/res/layout/activity_picture_camera.xml
@@ -45,6 +45,13 @@
             android:layout_height="50dp"
             android:background="@color/white"/>
 
+        <com.libpictureoptions.android.pictureCamera.view.WxTakePictureOrVideoUIView
+            android:id="@+id/wxUiView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentRight="true"
+            android:background="#0f0"/>
+
     </com.zhy.android.percent.support.PercentRelativeLayout>
 
     <RelativeLayout
